tests/resource/valid/function/allowed_exception.mamba
class MyErr isa Exception

def f(x: Int) raise [MyErr] => print "nothing"
def g(x: Int) raise [MyErr] => f(x)
