tests/resource/invalid/type/function/wrong_exception.mamba
class Err1(msg: String) isa Exception(msg)
class Err2(msg: String) isa Exception(msg)

def f(x: Int) -> Int raise [Err1] =>
    if x = 0 then
        return x + 5
    else
        raise Err2("Not zero")
